--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tic Tak Toe</title>
         <link rel="stylesheet" href="style.css">
+        <title>Tic Tac Toe</title>
     </head>
 
     <body>
         <div class="msg-container hide">
-            <p id="msg">Winner</p>
+            <p class="msg">Press the button to start the game</p>
             <button id="new-btn">New Game</button>
         </div>
         <main>
-            <h1>Tic Tak Toe</h1>
-            <div class="container">
-                <div class="game">
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
-                    <button class="box"></button>
+            <div class="show">
+                <h1>Tic Tac Toe</h1>
+                <div class="container">
+                    <div class="game">
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                    </div>
                 </div>
+                <button id="reset">Reset game</button>
             </div>
-            <button id="reset-btn">Reset Game</button>
+
         </main>
+
 
         <script src="app.js"></script>
     </body>
